--- a/.env
+++ b/.env
@@ -4,5 +4,6 @@ JWT_SECRET=12345678
 JWT_EXPIRES= 3d
 
 
-ADMIN_EMAIL=admin@gmail.com
+ADMIN_EMAIL="admin@gmail.com"
 ADMIN_PASSWORD=admin123
+ADMIN_PASSWORD_HASH=$2a$10$x7oqPdIkDbiLroubVqezJ.FhtPO/3MuMa2YTK.44f8JBMcUfuXWwy
